force-app/zurich-base/main/default/objects/GenerateMonitoringCriteria__mdt/GenerateMonitoringCriteria__mdt.object-meta.xml
<CustomObject>
    <label>Generate Monitoring Criteria</label>
    <pluralLabel>Generate Monitoring Criterias</pluralLabel>
</CustomObject>