force-app/zurich-base/main/default/objects/GenerateMonitoringCriteria__mdt/fields/Actividades__c.field-meta.xml
<CustomField>
    <fullName>Actividades__c</fullName>
    <label>Actividades</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>