force-app/zurich-base/main/default/objects/GenerateMonitoringCriteria__mdt/fields/FechaVencimiento__c.field-meta.xml
<CustomField>
    <fullName>FechaVencimiento__c</fullName>
    <label>Fecha Vencimiento</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>