force-app/zurich-base/main/default/objects/GenerateMonitoringCriteria__mdt/fields/MarcoActuacion__c.field-meta.xml
<CustomField>
    <fullName>MarcoActuacion__c</fullName>
    <label>Marco Actuación</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>