force-app/zurich-base/main/default/objects/GenerateMonitoringCriteria__mdt/fields/PicklistIncExcNull__c.field-meta.xml
<CustomField>
    <fullName>PicklistIncExcNull__c</fullName>
    <inlineHelpText>Indica si el valor de Segmento Mediación tiene que estar incluido(debe coincidir con el segmento de la cuenta), excluido(lo contrario) o no se comprueba.</inlineHelpText>
    <label>Picklist Inc Exc Null</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incluido</fullName>
                <default>true</default>
                <label>Incluido</label>
            </value>
            <value>
                <fullName>Excluido</fullName>
            </value>
            <value>
                <fullName>Ninguno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>