force-app/zurich-base/main/default/objects/GenerateMonitoringCriteria__mdt/fields/PrimaNeta__c.field-meta.xml
<CustomField>
    <fullName>PrimaNeta__c</fullName>
    <label>Prima Neta</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>