force-app/zurich-base/main/default/objects/GenerateMonitoringCriteria__mdt/fields/ProductoConstruccion__c.field-meta.xml
<CustomField>
    <fullName>ProductoConstruccion__c</fullName>
    <label>Producto Construcción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>