force-app/zurich-base/main/default/objects/GenerateMonitoringCriteria__mdt/fields/SegmentoMediacion__c.field-meta.xml
<CustomField>
    <fullName>SegmentoMediacion__c</fullName>
    <label>Segmento Mediación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>