force-app/zurich-base/main/default/objects/GenerateMonitoringCriteria__mdt/fields/SegmentoMediacionUSP__c.field-meta.xml
<CustomField>
    <fullName>SegmentoMediacionUSP__c</fullName>
    <label>Segmento Mediación USP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>